// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwapModalHeader.tsx matches base snapshot, test trade exact input 1`] = `
<DocumentFragment>
  .c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c4 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  gap: 12px;
}

.c6 {
  color: #7780A0;
}

.c8 {
  color: #0D111C;
}

.c12 {
  width: 100%;
  height: 1px;
  border-width: 0;
  margin: 0;
  background-color: #D2D9EE;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 24px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 4px;
}

.c0 {
  display: grid;
  grid-auto-rows: auto;
  grid-row-gap: 8px;
}

.c11 {
  --size: 36px;
  border-radius: 100px;
  color: #0D111C;
  background-color: #E8ECFB;
  font-size: calc(var(--size) / 3);
  font-weight: 500;
  height: 36px;
  line-height: 36px;
  text-align: center;
  width: 36px;
}

.c10 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c7 {
  display: inline-block;
  height: inherit;
}

.c9 {
  cursor: help;
  color: #7780A0;
  margin-right: 8px;
}

.c13 {
  margin: 16px 2px 24px 2px;
}

.c1 {
  margin-top: 16px;
}

<div
    class="c0 c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3 c4"
      >
        <div
          class="c5"
        >
          <div
            class="c6 css-1jljtub"
          >
            <div
              class="c7"
            >
              <div>
                <div
                  class="c8 c9 css-zhpkf8"
                  cursor="help"
                >
                  You pay
                </div>
              </div>
            </div>
          </div>
          <div
            class="c5"
          >
            <div
              class="c8 css-z2fexy"
              data-testid="INPUT-amount"
            >
              &lt;0.00001 ABC
            </div>
          </div>
        </div>
        <div
          class="c10"
        >
          <div
            class="c11"
          >
            ABC
          </div>
        </div>
      </div>
      <div
        class="c3 c4"
      >
        <div
          class="c5"
        >
          <div
            class="c6 css-1jljtub"
          >
            <div
              class="c7"
            >
              <div>
                <div
                  class="c8 c9 css-zhpkf8"
                  cursor="help"
                >
                  You receive
                </div>
              </div>
            </div>
          </div>
          <div
            class="c5"
          >
            <div
              class="c8 css-z2fexy"
              data-testid="OUTPUT-amount"
            >
              &lt;0.00001 DEF
            </div>
          </div>
        </div>
        <div
          class="c10"
        >
          <div
            class="c11"
          >
            DEF
          </div>
        </div>
      </div>
    </div>
    <div
      class="c12 c13"
    />
  </div>
</DocumentFragment>
`;

exports[`SwapModalHeader.tsx test trade exact output, no recipient 1`] = `
<DocumentFragment>
  .c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c4 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  gap: 12px;
}

.c6 {
  color: #7780A0;
}

.c8 {
  color: #0D111C;
}

.c12 {
  width: 100%;
  height: 1px;
  border-width: 0;
  margin: 0;
  background-color: #D2D9EE;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 24px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 4px;
}

.c0 {
  display: grid;
  grid-auto-rows: auto;
  grid-row-gap: 8px;
}

.c11 {
  --size: 36px;
  border-radius: 100px;
  color: #0D111C;
  background-color: #E8ECFB;
  font-size: calc(var(--size) / 3);
  font-weight: 500;
  height: 36px;
  line-height: 36px;
  text-align: center;
  width: 36px;
}

.c10 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c7 {
  display: inline-block;
  height: inherit;
}

.c9 {
  cursor: help;
  color: #7780A0;
  margin-right: 8px;
}

.c13 {
  margin: 16px 2px 24px 2px;
}

.c1 {
  margin-top: 16px;
}

<div
    class="c0 c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3 c4"
      >
        <div
          class="c5"
        >
          <div
            class="c6 css-1jljtub"
          >
            <div
              class="c7"
            >
              <div>
                <div
                  class="c8 c9 css-zhpkf8"
                  cursor="help"
                >
                  You pay
                </div>
              </div>
            </div>
          </div>
          <div
            class="c5"
          >
            <div
              class="c8 css-z2fexy"
              data-testid="INPUT-amount"
            >
              &lt;0.00001 ABC
            </div>
          </div>
        </div>
        <div
          class="c10"
        >
          <div
            class="c11"
          >
            ABC
          </div>
        </div>
      </div>
      <div
        class="c3 c4"
      >
        <div
          class="c5"
        >
          <div
            class="c6 css-1jljtub"
          >
            <div
              class="c7"
            >
              <div>
                <div
                  class="c8 c9 css-zhpkf8"
                  cursor="help"
                >
                  You receive
                </div>
              </div>
            </div>
          </div>
          <div
            class="c5"
          >
            <div
              class="c8 css-z2fexy"
              data-testid="OUTPUT-amount"
            >
              &lt;0.00001 GHI
            </div>
          </div>
        </div>
        <div
          class="c10"
        >
          <div
            class="c11"
          >
            GHI
          </div>
        </div>
      </div>
    </div>
    <div
      class="c12 c13"
    />
  </div>
</DocumentFragment>
`;
